--- a/index.html
+++ b/index.html
@@ -69,9 +69,15 @@
     .scenario2_3 .text-box {
       background-color: #f0f1f1;
       width: 100%;
-      padding: 0.4rem 0.5rem;
+      min-height: 60px;
+      max-height: 120px;
+      padding: 0.6rem 1rem;
+      margin-bottom: 0.7rem;
       font-size: 0.9rem;
+      line-height: 1.5;
+      overflow-y: auto;
     }
+
   </style>
 </head>
 <body>
