--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
       font-size: 0.9rem;
 
       /* 以下是高度相关控制 */
-      max-height: 120px;            /* 限制文本框最大高度，超出时会触发滚动条 */
+      max-height: 180px;            /* 限制文本框最大高度，超出时会触发滚动条 */
       overflow-y: auto;            /* 超过 max-height 时出现纵向滚动 */
       margin-top: 0.1rem;          /* 控制音频播放器与文本框的上下间距 */
+      height: 150px;       /* 固定高度 */
+      margin-bottom: 1rem; /* 单独调间距 */
     }
 
   </style>
