--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
       width: 100%;
     }
     .scenario2_3 .text-box {
-      background-color: #f7f7f7;   /* 文本框背景色 */
+      background-color: #cdbcbc;   /* 文本框背景色 */
       width: 100%;
       padding: 0.3rem 0.5rem;      /* 控制文字与边框的内边距 */
       font-size: 0.9rem;
 
       /* 以下是高度相关控制 */
-      max-height: 180px;            /* 限制文本框最大高度，超出时会触发滚动条 */
+      max-height: 80px;            /* 限制文本框最大高度，超出时会触发滚动条 */
       overflow-y: auto;            /* 超过 max-height 时出现纵向滚动 */
       margin-top: 0.1rem;          /* 控制音频播放器与文本框的上下间距 */
       height: 80px;       /* 固定高度 */
