--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       width: 100%;
     }
     .scenario2_3 .text-box {
-      background-color: #c97979;   /* 文本框背景色 */
+      background-color: #e8dede;   /* 文本框背景色 */
       width: 100%;
       padding: 0.3rem 0.5rem;      /* 控制文字与边框的内边距 */
       font-size: 0.9rem;
@@ -76,7 +76,7 @@
       
       overflow-y: auto;            /* 超过 max-height 时出现纵向滚动 */
       margin-top: 0.1rem;          /* 控制音频播放器与文本框的上下间距 */
-      height: 40px;       /* 固定高度 */
+      height: 10px;       /* 固定高度 */
       margin-bottom: 1rem; /* 单独调间距 */
     }
 
