--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       width: 100%;
     }
     .scenario2_3 .text-box {
-      background-color: #e8dede;   /* 文本框背景色 */
+      background-color: #abcf9d;   /* 文本框背景色 */
       width: 100%;
       padding: 0.3rem 0.5rem;      /* 控制文字与边框的内边距 */
       font-size: 0.9rem;
