--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       width: 100%;
     }
     .scenario1 .text-box {
-      background-color: #f7f7f7;
+      background-color: #9f4242;
       width: 100%;
       padding: 0.3rem 0.5rem;
       font-size: 0.9rem;
