--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
       width: 100%;
     }
     .scenario1 .text-box {
-      background-color: #9f4242;
+      background-color: #7a9f42;
       width: 100%;
       padding: 0.3rem 0.5rem;
       font-size: 0.9rem;
       overflow-y: auto;            /* 超过 max-height 时出现纵向滚动 */
       margin-top: 0.1rem;          /* 控制音频播放器与文本框的上下间距 */
-      height: 40px;       /* 固定高度 */
+      height: 50px;       /* 固定高度 */
       margin-bottom: 0.5rem; /* 单独调间距 */
     }
 
