--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       overflow-y: auto;            /* 超过 max-height 时出现纵向滚动 */
       margin-top: 0.1rem;          /* 控制音频播放器与文本框的上下间距 */
       height: 50px;       /* 固定高度 */
-      margin-bottom: 0.5rem; /* 单独调间距 */
+      margin: 0.3px
     }
 
     /* ----------------- 情景2 和 3 ----------------- */
@@ -71,7 +71,7 @@
       width: 100%;
     }
     .scenario2_3 .text-box {
-      background-color: #dacd82;   /* 文本框背景色 */
+      background-color: #e08916;   /* 文本框背景色 */
       width: 100%;
       padding: 0.3rem 0.5rem;      /* 控制文字与边框的内边距 */
       font-size: 0.9rem;
@@ -81,7 +81,7 @@
       overflow-y: auto;            /* 超过 max-height 时出现纵向滚动 */
       margin-top: 0.1rem;          /* 控制音频播放器与文本框的上下间距 */
       height: 60px;       /* 固定高度 */
-      margin-bottom: 0.5rem; /* 单独调间距 */
+      margin: 0.3px
     }
 
   </style>
