--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       width: 100%;
     }
     .scenario2_3 .text-box {
-      background-color: #dacd82;   /* 文本框背景色 */
+      background-color: #cee6e6;   /* 文本框背景色 */
       width: 100%;
       padding: 0.3rem 0.5rem;      /* 控制文字与边框的内边距 */
       font-size: 0.9rem;
@@ -182,13 +182,13 @@
           <div class="audio-block">
             <span class="audio-label">SCR Audio</span>
             <audio controls>
-              <source src="/home/icdm/ysq11/audio_baselines/SLU/demo_of_SLU_HUAWEI/static/audio/src_clean/audio--1504190218.wav" type="audio/wav">
+              <source src="./static/audio/src_clean/audio--1504190218.wav" type="audio/wav">
             </audio>
           </div>
           <div class="audio-block">
             <span class="audio-label">Inserted Audio</span>
             <audio controls>
-              <source src="/home/icdm/ysq11/audio_baselines/SLU/demo_of_SLU_HUAWEI/static/audio/wuguan_clean/audio--1504190218_wuguanyuyin01-TTS1504190218_n0.wav" type="audio/wav">
+              <source src="./static/audio/wuguan_clean/audio--1504190218_wuguanyuyin01-TTS1504190218_n0.wav" type="audio/wav">
             </audio>
           </div>
         </div>
