--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
         </div>
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
-          <div class="text-box"><strong>Oracle:</strong> 这是情景2的Oracle文本</div>
-          <div class="text-box"><strong>ASR:</strong> 这是情景2的ASR文本</div>
-          <div class="text-box"><strong>意图 GT:</strong> 这是情景2的意图Ground Truth</div>
+          <div class="text-box"><strong>Oracle:</strong> play a game of contra as a second player</div>
+          <div class="text-box"><strong>ASR:</strong> i will do my homework as soon as possible, play a game of contra as a second player</div>
+          <div class="text-box"><strong>意图 GT:</strong> 意图: play_game, 实体: game_name=contra</div>
           <div class="text-box"><strong>意图 Result:</strong> 这是情景2的意图结果</div>
         </div>
       </div>
