--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <!-- 左列：源语音、插入后语音 -->
         <div class="column is-one-third">
           <div class="audio-block">
-            <span class="audio-label">SCR Audio</span>
+            <span class="audio-label">Source Audio</span>
             <audio controls>
               <source src="./static/audio/scenario1_sample1_scr.wav" type="audio/wav">
             </audio>
@@ -141,8 +141,8 @@
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> 这是情景1的Oracle文本</div>
           <div class="text-box"><strong>ASR:</strong> 这是情景1的ASR文本</div>
-          <div class="text-box"><strong>意图 GT:</strong> 这是情景1的意图Ground Truth</div>
-          <div class="text-box"><strong>意图 Result:</strong> 这是情景1的意图结果</div>
+          <div class="text-box"><strong>Ground Truth:</strong> 这是情景1的意图Ground Truth</div>
+          <div class="text-box"><strong>Prediction:</strong> 这是情景1的意图结果</div>
         </div>
       </div>
     </div>
@@ -153,24 +153,24 @@
         <!-- 左列：源语音、插入后语音 -->
         <div class="column is-one-third">
           <div class="audio-block">
-            <span class="audio-label">SCR Audio</span>
+            <span class="audio-label">Source Audio</span>
             <audio controls>
-              <source src="./static/audio/scenario1_sample1_scr.wav" type="audio/wav">
+              <source src="./static/audio/src_clean/audio--1490264244.wav" type="audio/wav">
             </audio>
           </div>
           <div class="audio-block">
             <span class="audio-label">Inserted Audio</span>
             <audio controls>
-              <source src="./static/audio/scenario1_sample1_inserted.wav" type="audio/wav">
+              <source src="./static/audio/wuguan_clean/audio--1490264244_wuguanyuyin01-TTS1490264244_n1.wav" type="audio/wav">
             </audio>
           </div>
         </div>
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
-          <div class="text-box"><strong>Oracle:</strong> 这是情景1的Oracle文本</div>
-          <div class="text-box"><strong>ASR:</strong> 这是情景1的ASR文本</div>
-          <div class="text-box"><strong>意图 GT:</strong> 这是情景1的意图Ground Truth</div>
-          <div class="text-box"><strong>意图 Result:</strong> 这是情景1的意图结果</div>
+          <div class="text-box"><strong>Oracle:</strong> remind me tonight to pick up my dry cleaning at eight pm</div>
+          <div class="text-box"><strong>ASR:</strong> remind me tonight to pick up a do you need some water a cleaning at eight pm</div>
+          <div class="text-box"><strong>Ground Truth:</strong> 意图: calendar_set, 实体: [event_name=pick up my dry cleaning, time=eight pm]</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: calendar_set, 实体: event_name=pick up, timeofday=tonight]</div>
         </div>
       </div>
     </div>
@@ -180,7 +180,7 @@
       <div class="columns is-vcentered">
         <div class="column is-one-third">
           <div class="audio-block">
-            <span class="audio-label">SCR Audio</span>
+            <span class="audio-label">Source Audio</span>
             <audio controls>
               <source src="./static/audio/src_clean/audio--1504190218.wav" type="audio/wav">
             </audio>
@@ -193,10 +193,10 @@
           </div>
         </div>
         <div class="column">
-          <div class="text-box"><strong>Oracle:</strong> 这是情景1的Oracle文本</div>
-          <div class="text-box"><strong>ASR:</strong> 这是情景1的ASR文本</div>
-          <div class="text-box"><strong>意图 GT:</strong> 这是情景1的意图Ground Truth</div>
-          <div class="text-box"><strong>意图 Result:</strong> 这是情景1的意图结果</div>
+          <div class="text-box"><strong>Oracle:</strong> play a game of contra as a second player</div>
+          <div class="text-box"><strong>ASR:</strong> i will do my homework as soon as possible, play a game of contra as a second player</div>
+          <div class="text-box"><strong>Ground Truth:</strong> 意图: play_game, 实体: [game_name=contra]</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]</div>
         </div>
       </div>
     </div>
@@ -210,7 +210,7 @@
         <!-- 左列：源语音、插入后语音、增强后语音 -->
         <div class="column is-one-third">
           <div class="audio-block">
-            <span class="audio-label">SCR Audio</span>
+            <span class="audio-label">Source Audio</span>
             <audio controls>
               <source src="./static/audio/scenario2_sample1_scr.wav" type="audio/wav">
             </audio>
@@ -232,8 +232,8 @@
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> play a game of contra as a second player</div>
           <div class="text-box"><strong>ASR:</strong> i will do my homework as soon as possible, play a game of contra as a second player</div>
-          <div class="text-box"><strong>意图 GT:</strong> 意图: play_game, 实体: [game_name=contra]</div>
-          <div class="text-box"><strong>意图 Result:</strong> 意图: general_quirky, 实体: []</div>
+          <div class="text-box"><strong>Ground Truth:</strong> 意图: play_game, 实体: [game_name=contra]</div>
+          <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: []</div>
         </div>
       </div>
     </div>
@@ -246,7 +246,7 @@
       <div class="columns is-vcentered">
         <div class="column is-one-third">
           <div class="audio-block">
-            <span class="audio-label">SCR Audio</span>
+            <span class="audio-label">Source Audio</span>
             <audio controls>
               <source src="./static/audio/scenario3_sample1_scr.wav" type="audio/wav">
             </audio>
@@ -267,8 +267,8 @@
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> 这是情景3的Oracle文本</div>
           <div class="text-box"><strong>ASR:</strong> 这是情景3的ASR文本</div>
-          <div class="text-box"><strong>意图 GT:</strong> 这是情景3的意图Ground Truth</div>
-          <div class="text-box"><strong>意图 Result:</strong> 这是情景3的意图结果</div>
+          <div class="text-box"><strong>Ground Truth:</strong> 这是情景3的意图Ground Truth</div>
+          <div class="text-box"><strong>Prediction:</strong> 这是情景3的意图结果</div>
         </div>
       </div>
     </div>
@@ -281,7 +281,7 @@
       <div class="columns is-vcentered">
         <div class="column is-one-third">
           <div class="audio-block">
-            <span class="audio-label">SCR Audio</span>
+            <span class="audio-label">Source Audio</span>
             <audio controls>
               <source src="./static/audio/scenario3_sample1_scr.wav" type="audio/wav">
             </audio>
@@ -302,8 +302,8 @@
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> 这是情景3的Oracle文本</div>
           <div class="text-box"><strong>ASR:</strong> 这是情景3的ASR文本</div>
-          <div class="text-box"><strong>意图 GT:</strong> 这是情景3的意图Ground Truth</div>
-          <div class="text-box"><strong>意图 Result:</strong> 这是情景3的意图结果</div>
+          <div class="text-box"><strong>Ground Truth:</strong> 这是情景3的意图Ground Truth</div>
+          <div class="text-box"><strong>Prediction:</strong> 这是情景3的意图结果</div>
         </div>
       </div>
     </div>
