--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@
       <div class="column">
         <span class="audio-label">待识别音频</span>
         <audio controls>
-          <source src="./static/audio/scenario0_target.wav" type="audio/wav">
+          <source src="./static/audio/src_clean/audio--1501778636.wav" type="audio/wav">
         </audio>
         <div class="content">
-          <p><strong>ASR:</strong> 这里放待识别音频的ASR文本</p>
+          <p><strong>ASR:</strong> whats the currency exchange rate for china</p>
         </div>
       </div>
       <div class="column">
         <span class="audio-label">TTS无关音频</span>
         <audio controls>
-          <source src="./static/audio/scenario0_irrelevant.wav" type="audio/wav">
+          <source src="./static/audio/tts/wuguanyuyin02-TTS1501778636.wav" type="audio/wav">
         </audio>
         <div class="content">
-          <p><strong>ASR:</strong> 这里放无关音频的ASR文本</p>
+          <p><strong>ASR:</strong> you should store the food inthe fridge</p>
         </div>
       </div>
     </div>
