--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       padding: 0.3rem 0.5rem;
       font-size: 0.9rem;
       overflow-y: auto;            /* 超过 max-height 时出现纵向滚动 */
-      margin-top: 0.1rem;          /* 控制音频播放器与文本框的上下间距 */
+      margin-top: 0.1rem;          /* 控制语音播放器与文本框的上下间距 */
       height: 50px;       /* 固定高度 */
       margin-bottom: 0.5rem; /* 单独调间距 */
     }
@@ -79,7 +79,7 @@
       /* 以下是高度相关控制 */
       
       overflow-y: auto;            /* 超过 max-height 时出现纵向滚动 */
-      margin-top: 0.1rem;          /* 控制音频播放器与文本框的上下间距 */
+      margin-top: 0.1rem;          /* 控制语音播放器与文本框的上下间距 */
       height: 60px;       /* 固定高度 */
       margin-bottom: 0.5rem; /* 单独调间距 */
     }
@@ -93,10 +93,10 @@
     <h1 class="title">Sample 展示区</h1>
 
     <!-- 情景0 ------------------------------------------------------------------------------------------>
-    <h2 class="subtitle">同一说话人无关音频</h2>
+    <h2 class="subtitle">同一说话人无关语音</h2>
     <div class="columns scenario0">
       <div class="column">
-        <span class="audio-label">待识别音频</span>
+        <span class="audio-label">目标语音</span>
         <audio controls>
           <source src="./static/audio/src_clean/audio--1501778636.wav" type="audio/wav">
         </audio>
@@ -105,7 +105,7 @@
         </div>
       </div>
       <div class="column">
-        <span class="audio-label">TTS无关音频</span>
+        <span class="audio-label">TTS无关语音</span>
         <audio controls>
           <source src="./static/audio/tts/wuguanyuyin02-TTS1501778636.wav" type="audio/wav">
         </audio>
@@ -125,13 +125,13 @@
         <!-- 左列：源语音、插入后语音 -->
         <div class="column is-one-third">
           <div class="audio-block">
-            <span class="audio-label">Source Audio</span>
+            <span class="audio-label">源语音</span>
             <audio controls>
               <source src="./static/audio/src_clean/audio--1505407237.wav" type="audio/wav">
             </audio>
           </div>
           <div class="audio-block">
-            <span class="audio-label">Inserted Audio</span>
+            <span class="audio-label">插入后语音</span>
             <audio controls>
               <source src="./static/audio/wuguan_clean/audio--1505407237_wuguanyuyin02-TTS1505407237_n7.wav" type="audio/wav">
             </audio>
@@ -153,13 +153,13 @@
         <!-- 左列：源语音、插入后语音 -->
         <div class="column is-one-third">
           <div class="audio-block">
-            <span class="audio-label">Source Audio</span>
+            <span class="audio-label">源语音</span>
             <audio controls>
               <source src="./static/audio/src_clean/audio--1490264244.wav" type="audio/wav">
             </audio>
           </div>
           <div class="audio-block">
-            <span class="audio-label">Inserted Audio</span>
+            <span class="audio-label">插入后语音</span>
             <audio controls>
               <source src="./static/audio/wuguan_clean/audio--1490264244_wuguanyuyin01-TTS1490264244_n1.wav" type="audio/wav">
             </audio>
@@ -180,13 +180,13 @@
       <div class="columns is-vcentered">
         <div class="column is-one-third">
           <div class="audio-block">
-            <span class="audio-label">Source Audio</span>
+            <span class="audio-label">源语音</span>
             <audio controls>
               <source src="./static/audio/src_clean/audio--1504190218.wav" type="audio/wav">
             </audio>
           </div>
           <div class="audio-block">
-            <span class="audio-label">Inserted Audio</span>
+            <span class="audio-label">插入后语音</span>
             <audio controls>
               <source src="./static/audio/wuguan_clean/audio--1504190218_wuguanyuyin01-TTS1504190218_n0.wav" type="audio/wav">
             </audio>
@@ -210,19 +210,19 @@
         <!-- 左列：源语音、插入后语音、增强后语音 -->
         <div class="column is-one-third">
           <div class="audio-block">
-            <span class="audio-label">Source Audio</span>
+            <span class="audio-label">源语音</span>
             <audio controls>
               <source src="./static/audio/scenario2_sample1_scr.wav" type="audio/wav">
             </audio>
           </div>
           <div class="audio-block">
-            <span class="audio-label">Inserted Audio</span>
+            <span class="audio-label">插入后语音</span>
             <audio controls>
               <source src="./static/audio/scenario2_sample1_inserted.wav" type="audio/wav">
             </audio>
           </div>
           <div class="audio-block">
-            <span class="audio-label">Enhanced Audio</span>
+            <span class="audio-label">增强后语音</span>
             <audio controls>
               <source src="./static/audio/scenario2_sample1_enh.wav" type="audio/wav">
             </audio>
@@ -246,19 +246,19 @@
       <div class="columns is-vcentered">
         <div class="column is-one-third">
           <div class="audio-block">
-            <span class="audio-label">Source Audio</span>
+            <span class="audio-label">源语音</span>
             <audio controls>
               <source src="./static/audio/scenario3_sample1_scr.wav" type="audio/wav">
             </audio>
           </div>
           <div class="audio-block">
-            <span class="audio-label">Inserted Audio</span>
+            <span class="audio-label">插入后语音</span>
             <audio controls>
               <source src="./static/audio/scenario3_sample1_inserted.wav" type="audio/wav">
             </audio>
           </div>
           <div class="audio-block">
-            <span class="audio-label">Enhanced Audio</span>
+            <span class="audio-label">增强后语音</span>
             <audio controls>
               <source src="./static/audio/scenario3_sample1_enh.wav" type="audio/wav">
             </audio>
@@ -281,19 +281,19 @@
       <div class="columns is-vcentered">
         <div class="column is-one-third">
           <div class="audio-block">
-            <span class="audio-label">Source Audio</span>
+            <span class="audio-label">源语音</span>
             <audio controls>
               <source src="./static/audio/scenario3_sample1_scr.wav" type="audio/wav">
             </audio>
           </div>
           <div class="audio-block">
-            <span class="audio-label">Inserted Audio</span>
+            <span class="audio-label">插入后语音</span>
             <audio controls>
               <source src="./static/audio/scenario3_sample1_inserted.wav" type="audio/wav">
             </audio>
           </div>
           <div class="audio-block">
-            <span class="audio-label">Enhanced Audio</span>
+            <span class="audio-label">增强后语音</span>
             <audio controls>
               <source src="./static/audio/scenario3_sample1_enh.wav" type="audio/wav">
             </audio>
