--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       width: 100%;
       padding: 0.3rem 0.5rem;
       font-size: 0.9rem;
-      overflow-y: auto;            /* 超过 max-height 时出现纵向滚动 */
+      overflow-y: hidden;            /* 超过 max-height 时出现纵向滚动 */
       margin-top: 0.1rem;          /* 控制语音播放器与文本框的上下间距 */
       height: 50px;       /* 固定高度 */
       margin-bottom: 0.5rem; /* 单独调间距 */
@@ -78,7 +78,7 @@
 
       /* 以下是高度相关控制 */
       
-      overflow-y: auto;            /* 超过 max-height 时出现纵向滚动 */
+      overflow-y: hidden;            /* 超过 max-height 时出现纵向滚动 */
       margin-top: 0.1rem;          /* 控制语音播放器与文本框的上下间距 */
       height: 60px;       /* 固定高度 */
       margin-bottom: 0.5rem; /* 单独调间距 */
