--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       font-size: 0.9rem;
       overflow-y: hidden;            /* 超过 max-height 时出现纵向滚动 */
       margin-top: 0.1rem;          /* 控制语音播放器与文本框的上下间距 */
-      height: 50px;       /* 固定高度 */
+      height: 60px;       /* 固定高度 */
       margin-bottom: 0.5rem; /* 单独调间距 */
     }
 
@@ -71,7 +71,7 @@
       width: 100%;
     }
     .scenario2_3 .text-box {
-      background-color: #cee6e6;   /* 文本框背景色 */
+      background-color: #e6ceda;   /* 文本框背景色 */
       width: 100%;
       padding: 0.3rem 0.5rem;      /* 控制文字与边框的内边距 */
       font-size: 0.9rem;
@@ -231,7 +231,7 @@
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
           <div class="text-box"><strong>Oracle:</strong> play a game of contra as a second player</div>
-          <div class="text-box"><strong>ASR:</strong> i will do my homework as soon as possible, play a game of contra as a second player</div>
+          <div class="text-box"><strong>ASR:</strong> i will do my homework as soon as possible play a game of contra as a second player</div>
           <div class="text-box"><strong>Ground Truth:</strong> 意图: play_game, 实体: [game_name=contra]</div>
           <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: []</div>
         </div>
