--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       width: 100%;
       box-sizing: border-box;
     }
+    /*-------展示区和情景0之间间距---------*/
+    .subtitle:first-of-type {
+      margin-top: 2rem; /* 单独让第一个 subtitle 和上面空开 */
+    }
 
     /* ----------------- 情景0 ----------------- */
     .scenario0 .column {
